exports[`OpenSpots component applies correct classes to empty and expired spots 1`] = `
<div
  className="open-spots-display">
  <div
    className="weekday">
    <p>
      Mon, 01/02
    </p>
    <div
      className="expired-spot">
      <span
        onClick={[Function]}>
        09:00 am: 2 available
      </span>
    </div>
    <div
      className="expired-spot">
      <span
        onClick={[Function]}>
        10:00 am: none available
      </span>
    </div>
  </div>
  <div
    className="weekday">
    <p>
      Tue, 01/03
    </p>
    <div
      className="closed-spot">
      <span
        onClick={[Function]}>
        10:00 am: none available
      </span>
    </div>
  </div>
</div>
`;

exports[`OpenSpots component correctly partitions and renders open spots 1`] = `
<div
  className="open-spots-display">
  <div
    className="weekday">
    <p>
      Tue, 01/03
    </p>
    <div
      className="open-spot">
      <span
        onClick={[Function]}>
        10:00 am: 2 available
      </span>
    </div>
  </div>
  <div
    className="weekday">
    <p>
      Wed, 01/04
    </p>
    <div
      className="open-spot">
      <span
        onClick={[Function]}>
        09:00 am: 2 available
      </span>
    </div>
  </div>
  <div
    className="weekday">
    <p>
      Thu, 01/05
    </p>
    <div
      className="open-spot">
      <span
        onClick={[Function]}>
        10:00 am: 1 available
      </span>
    </div>
    <div
      className="open-spot">
      <span
        onClick={[Function]}>
        11:00 am: 5 available
      </span>
    </div>
  </div>
</div>
`;

exports[`OpenSpots component renders a spinner if both location and course are selected, but openSpots is a Left of loading message 1`] = `
<div
  className="open-spots-message">
  <div
    className="loading" />
</div>
`;

exports[`OpenSpots component renders an appropriate error message if course is not selected but location is 1`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Course
  </h1>
</div>
`;

exports[`OpenSpots component renders an appropriate error message if location is missing 1`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Location
  </h1>
</div>
`;

exports[`OpenSpots component renders an appropriate error message if location is missing 2`] = `
<div
  className="open-spots-message">
  <h1>
    Select a Location
  </h1>
</div>
`;

exports[`OpenSpots component renders an error message if both location and course are selected, but openSpots is a Left of any other message 1`] = `
<div
  className="open-spots-message">
  <h1>
    No ducks here.
  </h1>
</div>
`;
